--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "85498951",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "66710ad4",
    "metadata": {},
    "outputs": [
@@ -14767,7 +14767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "b834ad0b",
    "metadata": {},
    "outputs": [],
@@ -14782,7 +14782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "fbc02671",
    "metadata": {},
    "outputs": [
@@ -29456,7 +29456,7 @@
        "946            0.084  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29470,7 +29470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "7a7f1299",
    "metadata": {},
    "outputs": [
@@ -29566,7 +29566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "ab166152",
    "metadata": {},
    "outputs": [
@@ -29678,7 +29678,7 @@
        "946          0.320         0.546  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29705,7 +29705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "9e82945c",
    "metadata": {},
    "outputs": [
@@ -29769,7 +29769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "19a59203",
    "metadata": {},
    "outputs": [
@@ -29862,7 +29862,7 @@
        "4         0.716018  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29901,7 +29901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "b260cf08",
    "metadata": {},
    "outputs": [
@@ -29981,7 +29981,7 @@
        "4  1.155349 -0.242884        Ghana           7"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30003,7 +30003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "bdf376b6",
    "metadata": {},
    "outputs": [
@@ -30030,7 +30030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "e69ffe8a",
    "metadata": {},
    "outputs": [
@@ -30208,7 +30208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "f568c81e",
    "metadata": {},
    "outputs": [
@@ -30312,7 +30312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "2035c5bd",
    "metadata": {},
    "outputs": [
@@ -30384,7 +30384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "ba839964",
    "metadata": {},
    "outputs": [
@@ -30450,7 +30450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "588b8a45",
    "metadata": {},
    "outputs": [],
@@ -30466,7 +30466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "79283f13",
    "metadata": {},
    "outputs": [
@@ -30570,7 +30570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "4559e8e9",
    "metadata": {},
    "outputs": [
@@ -30839,7 +30839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "637944e5",
    "metadata": {},
    "outputs": [
@@ -30847,7 +30847,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_20968\\1627459844.py:2: FutureWarning: \n",
+      "C:\\Users\\elias\\AppData\\Local\\Temp\\ipykernel_2164\\1627459844.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -30911,7 +30911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "ee22fa89",
    "metadata": {},
    "outputs": [
@@ -31016,7 +31016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "84033690",
    "metadata": {},
    "outputs": [
@@ -31112,7 +31112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "4ac895a3",
    "metadata": {},
    "outputs": [
@@ -31452,7 +31452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "94cb606c",
    "metadata": {},
    "outputs": [
@@ -31526,7 +31526,7 @@
        "946        Ghana  Democracias intermedias / híbridas  GHA"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31574,7 +31574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "eaa083d4",
    "metadata": {},
    "outputs": [
@@ -31723,7 +31723,7 @@
        "4         0.546  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31797,7 +31797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "a83b074c",
    "metadata": {},
    "outputs": [
@@ -31910,7 +31910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "b3653eff",
    "metadata": {},
    "outputs": [
@@ -32040,7 +32040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "id": "7050064e",
    "metadata": {},
    "outputs": [],
@@ -32059,7 +32059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "id": "7297045d",
    "metadata": {},
    "outputs": [
@@ -34644,7 +34644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "1af72c22",
    "metadata": {},
    "outputs": [
@@ -34655,7 +34655,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34696,7 +34696,7 @@
     "\n",
     "📎 **En síntesis:**\n",
     "\n",
-    "> La geografía política global continúa mostrando una división clara entre  \n",
+    "> La geografía política global continúa mostrando una división clara entre\n",
     "> democracias consolidadas, regímenes híbridos y autoritarismos, con algunos  \n",
     "> casos excepcionales que desafían patrones regionales tradicionales."
    ]
@@ -34708,71 +34708,71 @@
    "source": [
     "## 7. Conclusiones y próximos pasos\n",
     "\n",
-    "Este proyecto identificó **tres tipologías globales de regímenes políticos en 2024** utilizando\n",
-    "clustering no supervisado a partir de indicadores consolidados del dataset **V-Dem v15**.\n",
+    "Este proyecto identificó **tres tipologías globales de regímenes políticos en 2024**\n",
+    "mediante técnicas de aprendizaje no supervisado aplicadas a indicadores del dataset\n",
+    "**V-Dem v15**.\n",
     "\n",
     "### ✅ Conclusiones principales\n",
     "\n",
-    "🔹 **La democracia es una dimensión dominante a nivel global**  \n",
-    "El PCA mostró que PC1 explica ~97% de la variabilidad → diferencias claras entre:\n",
-    "- **Democracias consolidadas**\n",
-    "- **Regímenes autoritarios**\n",
-    "- **Sistemas híbridos o en transición**\n",
+    "🔹 **Existen diferencias estructurales claras entre tipos de régimen**  \n",
+    "El análisis de componentes principales (PCA) mostró que **PC1 explica ~97% de la variabilidad**, lo que revela un eje dominante que separa:\n",
     "\n",
-    "🔹 **Se distinguieron 3 clusters globales:**\n",
-    "| Cluster | Significado | Regiones predominantes |\n",
-    "|--------:|-------------|----------------------|\n",
-    "| 🟢 2 | Democracias consolidadas | Europa Occidental, Norteamérica, Oceanía, Asia Oriental |\n",
-    "| 🟡 0 | Democracias intermedias / híbridas | América Latina, Europa del Este, Norte de África |\n",
+    "- Democracias consolidadas\n",
+    "- Democracias intermedias / híbridas\n",
+    "- Regímenes autoritarios\n",
+    "\n",
+    "Los cinco indicadores de V-Dem están **altamente correlacionados**, por lo que una sola\n",
+    "dimensión latente resume prácticamente toda la información relevante sobre calidad democrática.\n",
+    "\n",
+    "🔹 **Los 3 clusters obtenidos son consistentes con patrones geopolíticos conocidos**\n",
+    "| Cluster | Interpretación | Regiones predominantes |\n",
+    "|--------:|----------------|----------------------|\n",
+    "| 🟢 2 | Democracias consolidadas | Europa Occidental, Norteamérica, Oceanía, Japón |\n",
+    "| 🟡 0 | Democracias intermedidas / híbridas | América Latina, Europa del Este, Norte de África |\n",
     "| 🔴 1 | Regímenes autoritarios | Medio Oriente, Asia Central, África Subsahariana |\n",
     "\n",
-    "🔹 **Coherencia con la teoría política**  \n",
-    "Los resultados cuantitativos reflejan dinámicas geopolíticas ampliamente documentadas.\n",
+    "🔹 **Coherencia con la teoría política comparada**  \n",
+    "La estructura empírica hallada coincide con dinámicas ampliamente documentadas en\n",
+    "**Política Comparada** y **Geografía Política**.\n",
     "\n",
     "---\n",
     "\n",
     "### 📍 Caso Argentina\n",
-    "- Se ubica en el **Cluster 0** → Democracia con buena calidad electoral,\n",
-    "  pero con **debilidades institucionales** persistentes.\n",
+    "- Ubicada en el **Cluster 0**\n",
+    "- Democracia electoral con instituciones formales estables\n",
+    "- Presenta **debilidades en deliberación y control del poder**, según los indicadores incluidos\n",
     "\n",
     "---\n",
     "\n",
     "### ⚠️ Limitaciones del análisis\n",
-    "- Se utilizó únicamente la **foto actual** (2024) → no se refleja la evolución democrática.\n",
-    "- La clasificación **no es normativa**, sino estadística: agrupa similitudes en indicadores,\n",
-    "  no juicios sustantivos sobre “mejor” o “peor” sistema.\n",
+    "- Se utiliza una **foto de un solo año** → no refleja trayectorias históricas.\n",
+    "- Las etiquetas de interpretación **no derivan del algoritmo**, sino del análisis politológico.\n",
+    "- El modelo **no emite juicios normativos** sobre la calidad democrática.\n",
     "\n",
     "---\n",
     "\n",
     "### 🚀 Próximos pasos sugeridos\n",
     "\n",
     "📌 Extensiones metodológicas:\n",
-    "- Incorporar **series temporales** (1990–2024) → evolución de trayectorias democráticas\n",
-    "- Probar métodos más robustos de clustering (**DBSCAN**, **GMM**)\n",
-    "- Añadir más indicadores (p. ej., derechos de minorías, control de corrupción)\n",
+    "- Integrar **series temporales (1990–2024)** para estudiar transiciones democráticas\n",
+    "- Comparar con otros modelos (**DBSCAN**, **Gaussian Mixture Models**)\n",
+    "- Incluir nuevas dimensiones: **control de corrupción**, **derechos de minorías**\n",
     "\n",
-    "📌 Visualizaciones adicionales:\n",
-    "- Mapa **interactivo** con hover de métricas\n",
-    "- **Dashboard** en Power BI / Tableau / Plotly Dash\n",
+    "📌 Validación politológica externa:\n",
+    "- Contrastar tipologías con:\n",
+    "  - **Freedom House – Freedom in the World (FiW)**\n",
+    "  - **Economist Intelligence Unit – Democracy Index (EIU)**\n",
+    "  (indicadores ampliamente utilizados en Política Comparada y Geografía Política)\n",
     "\n",
-    "📌 Validación politológica:\n",
-    "- Contrastar resultados con clasificaciones externas:\n",
-    "  - Freedom House\n",
-    "  - Economist Democracy Index\n",
-    "  - Polity5\n",
+    "📌 Mejoras de difusión:\n",
+    "- Publicación del mapa interactivo para consulta pública\n",
+    "- Desarrollo de dashboard (Power BI / Tableau / Plotly Dash)\n",
     "\n",
     "---\n",
     "\n",
     "📎 En síntesis:\n",
-    "\n",
-    "> **La tipología identificada es empíricamente sólida, teóricamente compatible y geopolíticamente interpretable**, lo que la convierte en un excelente insumo para investigación y toma de decisiones pública internacional."
+    "> **La tipología identificada es empíricamente robusta y teóricamente interpretable**, aportando un insumo útil para investigación y análisis en Política Comparada."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f0c54bda",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
