--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -34770,7 +34770,7 @@
     "\n",
     "---\n",
     "\n",
-    "📎 En síntesis:\n",
+    "En síntesis:\n",
     "> **La tipología identificada es empíricamente robusta y teóricamente interpretable**, aportando un insumo útil para investigación y análisis en Política Comparada."
    ]
   }
