--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -34708,9 +34708,7 @@
    "source": [
     "## 7. Conclusiones y próximos pasos\n",
     "\n",
-    "Este proyecto identificó **tres tipologías globales de regímenes políticos en 2024**\n",
-    "mediante técnicas de aprendizaje no supervisado aplicadas a indicadores del dataset\n",
-    "**V-Dem v15**.\n",
+    "Este proyecto identificó **tres tipologías globales de regímenes políticos en 2024** mediante técnicas de aprendizaje no supervisado aplicadas a indicadores del dataset **V-Dem v15**.\n",
     "\n",
     "### ✅ Conclusiones principales\n",
     "\n",
@@ -34732,8 +34730,7 @@
     "| 🔴 1 | Regímenes autoritarios | Medio Oriente, Asia Central, África Subsahariana |\n",
     "\n",
     "🔹 **Coherencia con la teoría política comparada**  \n",
-    "La estructura empírica hallada coincide con dinámicas ampliamente documentadas en\n",
-    "**Política Comparada** y **Geografía Política**.\n",
+    "La estructura empírica hallada coincide con dinámicas ampliamente documentadas en **Política Comparada** y **Geografía Política**.\n",
     "\n",
     "---\n",
     "\n",
