--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -34737,7 +34737,7 @@
     "### 📍 Caso Argentina\n",
     "- Ubicada en el **Cluster 0**\n",
     "- Democracia electoral con instituciones formales estables\n",
-    "- Presenta **debilidades en deliberación y control del poder**, según los indicadores incluidos\n",
+    "- Presenta **limitaciones en igualdad política y controles al poder**, propias de las democracias intermedias\n",
     "\n",
     "---\n",
     "\n",
