--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -34708,7 +34708,9 @@
    "source": [
     "## 7. Conclusiones y próximos pasos\n",
     "\n",
-    "Este proyecto identificó **tres tipologías globales de regímenes políticos en 2024** mediante técnicas de aprendizaje no supervisado aplicadas a indicadores del dataset **V-Dem v15**.\n",
+    "Este proyecto identificó **tres tipologías globales de regímenes políticos en 2024**\n",
+    "mediante técnicas de aprendizaje no supervisado aplicadas a indicadores del dataset\n",
+    "**V-Dem v15**.\n",
     "\n",
     "### ✅ Conclusiones principales\n",
     "\n",
@@ -34726,18 +34728,19 @@
     "| Cluster | Interpretación | Regiones predominantes |\n",
     "|--------:|----------------|----------------------|\n",
     "| 🟢 2 | Democracias consolidadas | Europa Occidental, Norteamérica, Oceanía, Japón |\n",
-    "| 🟡 0 | Democracias intermedidas / híbridas | América Latina, Europa del Este, Norte de África |\n",
+    "| 🟡 0 | Democracias intermedias / híbridas | América Latina, Europa del Este, Norte de África |\n",
     "| 🔴 1 | Regímenes autoritarios | Medio Oriente, Asia Central, África Subsahariana |\n",
     "\n",
     "🔹 **Coherencia con la teoría política comparada**  \n",
-    "La estructura empírica hallada coincide con dinámicas ampliamente documentadas en **Política Comparada** y **Geografía Política**.\n",
+    "La estructura empírica hallada coincide con dinámicas ampliamente documentadas en\n",
+    "**Política Comparada** y **Geografía Política**.\n",
     "\n",
     "---\n",
     "\n",
     "### 📍 Caso Argentina\n",
     "- Ubicada en el **Cluster 0**\n",
     "- Democracia electoral con instituciones formales estables\n",
-    "- Presenta **limitaciones en igualdad política y controles al poder**, propias de las democracias intermedias\n",
+    "- Presenta **limitaciones en igualdad política y controles al poder**, propias de las democracias intermedias según V-Dem\n",
     "\n",
     "---\n",
     "\n",
@@ -34767,9 +34770,15 @@
     "\n",
     "---\n",
     "\n",
-    "En síntesis:\n",
+    "📎 En síntesis:\n",
     "> **La tipología identificada es empíricamente robusta y teóricamente interpretable**, aportando un insumo útil para investigación y análisis en Política Comparada."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c94fe88",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
