Final intro and README

--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "## Introducción\n",
     "\n",
-    "La democracia adopta múltiples formas y niveles de calidad. Este proyecto analiza **cómo se agrupan los países del mundo** según sus características institucionales y políticas, empleando indicadores desarrollados por el prestigioso proyecto **V-Dem (Varieties of Democracy)**.\n",
+    "La democracia adopta múltiples formas y niveles de calidad. Este proyecto analiza **cómo se agrupan los países del mundo** según sus características institucionales y políticas, empleando indicadores desarrollados por el proyecto **V-Dem (Varieties of Democracy)**.\n",
     "\n",
-    "V-Dem es una iniciativa internacional coordinada por la **Universidad de Gotemburgo** (Suecia) y la **Universidad de Notre Dame** (Estados Unidos), que trabaja junto con una red global de más de **3.500 expertos** para evaluar la calidad democrática a escala mundial.\n",
+    "V-Dem es una iniciativa internacional coordinada por la **Universidad de Gotemburgo** (Suecia) y la **Universidad de Notre Dame** (Estados Unidos), que trabaja junto con una red global de más de **3.500 expertos** para evaluar la calidad democrática a escala mundial. **Es una de las principales bases de datos internacionales utilizadas en el estudio comparado de la democracia.**\n",
     "\n",
     "Los datos de V-Dem constituyen **uno de los estándares más completos** en estudios comparados de democracia, midiendo dimensiones tales como:\n",
     "\n",
@@ -34773,12 +34773,6 @@
     "📎 En síntesis:\n",
     "> **La tipología identificada es empíricamente robusta y teóricamente interpretable**, aportando un insumo útil para investigación y análisis en Política Comparada."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c94fe88",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
