--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -34689,16 +34689,13 @@
     "\n",
     "---\n",
     "\n",
-    "📍 **Argentina** se ubica en el *cluster 0*, en línea con su clasificación como  \n",
-    "**democracia electoral con debilidades institucionales**.\n",
+    "📍 **Argentina** se ubica en el *cluster 0*, en línea con su clasificación como **democracia electoral con debilidades institucionales**.\n",
     "\n",
     "---\n",
     "\n",
     "📎 **En síntesis:**\n",
     "\n",
-    "> La geografía política global continúa mostrando una división clara entre\n",
-    "> democracias consolidadas, regímenes híbridos y autoritarismos, con algunos  \n",
-    "> casos excepcionales que desafían patrones regionales tradicionales."
+    "> La geografía política global continúa mostrando una división clara entre democracias consolidadas, regímenes híbridos y autoritarismos, con algunos casos excepcionales que desafían patrones regionales tradicionales."
    ]
   },
   {
