--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "---\n",
     "\n",
-    "En este proyecto se aplican **técnicas de Machine Learning no supervisado** para **identificar tipologías empíricas de regímenes políticos contemporáneos**. Mediante análisis de componentes principales (**PCA**) y **K-Means**, se encuentra que el modelo óptimo de agrupamiento distingue **tres clusters**:\n",
+    "En este proyecto se aplican **técnicas de Machine Learning no supervisado** para **identificar tipologías empíricas de regímenes políticos contemporáneos**. Mediante análisis de componentes principales (**PCA**) y **K-Means**, se encuentra que el modelo óptimo de agrupamiento distingue **tres agrupamientos**:\n",
     "\n",
     "- 🟢 *Democracias consolidadas* — cluster 2  \n",
     "- 🟡 *Democracias intermedias / híbridas* — cluster 0  \n",
@@ -71,15 +71,6 @@
     "- Se consideran **variables institucionales y de libertades en 2024/último año disponible**.  \n",
     "- Se reconoce que **toda clasificación politológica es una simplificación** de fenómenos complejos.  \n",
     "- El propósito no es emitir **juicios normativos**, sino explorar patrones empíricos existentes.  \n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Reproducibilidad\n",
-    "\n",
-    "- Dependencias definidas en `requirements.txt`  \n",
-    "- Estructura del proyecto basada en mejores prácticas de Data Science  \n",
-    "- Archivo exportado: `data/processed/vdem_clusters_2024.csv`  \n",
-    "- Código y visualizaciones disponibles en GitHub  \n",
     "\n",
     "---\n",
     "\n",
