--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -149,9 +149,7 @@
    "source": [
     "## 1. Carga e inspección inicial de los datos\n",
     "\n",
-    "En esta sección se importa el dataset y se realiza una primera exploración general.  \n",
-    "El objetivo es verificar la estructura, tipos de datos, valores nulos o duplicados,  \n",
-    "y obtener una visión preliminar del contenido antes del análisis detallado."
+    "En esta sección se importa el dataset y se realiza una primera exploración general. El objetivo es verificar la estructura, tipos de datos, valores nulos o duplicados, y obtener una visión preliminar del contenido antes del análisis detallado."
    ]
   },
   {
