--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -87,8 +87,7 @@
    "source": [
     "## 0. Configuración inicial\n",
     "\n",
-    "En esta sección se importan las librerías necesarias y se definen configuraciones visuales globales  \n",
-    "que se aplicarán a lo largo del notebook."
+    "En esta sección se importan las librerías necesarias y se definen configuraciones visuales globales que se aplicarán a lo largo del notebook."
    ]
   },
   {
