--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -148,12 +148,12 @@
    "source": [
     "## 1. Carga e inspección inicial de los datos\n",
     "\n",
-    "En esta sección se importa el dataset y se realiza una primera exploración general. El objetivo es verificar la estructura, tipos de datos, valores nulos o duplicados, y obtener una visión preliminar del contenido antes del análisis detallado."
+    "En esta sección se carga el dataset y se realiza una primera exploración general. El objetivo es verificar la estructura, tipos de datos, valores nulos o duplicados, y obtener una visión preliminar del contenido antes del análisis detallado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "85498951",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "66710ad4",
    "metadata": {},
    "outputs": [
@@ -14755,7 +14755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b834ad0b",
    "metadata": {},
    "outputs": [],
@@ -14770,7 +14770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fbc02671",
    "metadata": {},
    "outputs": [
@@ -29458,7 +29458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7a7f1299",
    "metadata": {},
    "outputs": [
@@ -29508,8 +29508,7 @@
     "- No se detectaron filas duplicadas ✅  \n",
     "- Existen muchas columnas con valores nulos altos, lo cual es esperable en V-Dem porque  \n",
     "  incluyen indicadores históricos y específicos por país/época  \n",
-    "- Para el análisis de clustering, se realizará una **selección dirigida** de indicadores  \n",
-    "  centrales sobre calidad democrática para evitar ruido e incompletitud en los dato"
+    "- Para el análisis de clustering, se realizará una **selección dirigida** de indicadores centrales sobre calidad democrática para evitar ruido e incompletitud en los datos"
    ]
   },
   {
