--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -29756,7 +29756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "19a59203",
    "metadata": {},
    "outputs": [
@@ -29873,7 +29873,7 @@
     "    \"partipdem_scaled\", \"delibdem_scaled\"\n",
     "])\n",
     "\n",
-    "X_scaled_df.head()\n"
+    "X_scaled_df.head()"
    ]
   },
   {
