--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -31751,23 +31751,25 @@
    "source": [
     "## 6. Visualización geográfica de los clusters\n",
     "\n",
-    "Para contextualizar geopolíticamente los resultados, se proyectan los **tres tipos de regímenes políticos** identificados mediante K-Means sobre un **mapa mundial**.\n",
+    "Para contextualizar geopolíticamente los resultados, se proyectan los **tres tipos de regímenes políticos** identificados mediante K-Means sobre un **mapa mundial interactivo**.\n",
     "\n",
     "Este análisis permite:\n",
     "\n",
-    "- observar la **distribución regional** de cada tipología democrática  \n",
-    "- identificar bloques espaciales (Europa, África Subsahariana, Medio Oriente, etc.)  \n",
-    "- detectar **patrones geopolíticos** y posibles excepciones  \n",
+    "- observar la **distribución regional** de cada tipología democrática;  \n",
+    "- identificar **bloques espaciales** (Europa, África Subsahariana, Medio Oriente, etc.);  \n",
+    "- detectar **patrones geopolíticos** y posibles excepciones.\n",
     "\n",
-    "Se utilizarán dos enfoques complementarios:\n",
+    "El mapa se construye con `Plotly`, permitiendo interacción dinámica:\n",
+    "- *Hover* sobre cada país para ver su nombre, cluster y coordenadas en PC1–PC2;\n",
+    "- Colores definidos según tipo de régimen político:\n",
     "\n",
-    "1️⃣ **Mapa estático** con `Geopandas` → vista general profesional  \n",
-    "2️⃣ **Mapa interactivo** con `Plotly` → exploración país por país  \n",
+    "| Cluster | Color | Interpretación |\n",
+    "|--------:|:-----:|----------------|\n",
+    "| 2 | 🟢 Verde | Democracias consolidadas |\n",
+    "| 0 | 🟡 Amarillo | Democracias intermedias / híbridas |\n",
+    "| 1 | 🔴 Rojo | Regímenes autoritarios |\n",
     "\n",
-    "Cada país será coloreado según su cluster asignado:\n",
-    "- 🟢 Cluster 2 → **Democracias consolidadas**  \n",
-    "- 🟡 Cluster 0 → **Democracias intermedias / híbridas**  \n",
-    "- 🔴 Cluster 1 → **Regímenes autoritarios**"
+    "Cada país es coloreado según su cluster asignado, facilitando la exploración visual de la tipología democrática global en 2024."
    ]
   },
   {
