--- a/democracy_clustering_vdem.ipynb.ipynb
+++ b/democracy_clustering_vdem.ipynb.ipynb
@@ -34707,8 +34707,7 @@
     "- Democracias intermedias / híbridas\n",
     "- Regímenes autoritarios\n",
     "\n",
-    "Los cinco indicadores de V-Dem están **altamente correlacionados**, por lo que una sola\n",
-    "dimensión latente resume prácticamente toda la información relevante sobre calidad democrática.\n",
+    "Los cinco indicadores de V-Dem están **altamente correlacionados**, por lo que una sola dimensión latente resume prácticamente toda la información relevante sobre calidad democrática.\n",
     "\n",
     "🔹 **Los 3 clusters obtenidos son consistentes con patrones geopolíticos conocidos**\n",
     "| Cluster | Interpretación | Regiones predominantes |\n",
